[tool.poetry]
name = "finance-api-exploration"
version = "0.1.0"
description = "Exploring different finance api options available in python"
authors = ["Ryan Skinner <rskinner593@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^3.0.10"
yfinance = "^0.1.55"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
